--- a/museo-statico/home.html
+++ b/museo-statico/home.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
 
   <!-- inizio MENU -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -137,48 +137,6 @@
     </div>
   </div>
   <!-- fine 4 COLONNE -->
-
-
-  <!-- inizio 2 COLONNE -->
-  <div class="container">
-    <div class="row">
-
-      <div class="col-6">
-        <div class="white-panel white-panel--left p-4">
-          <h2>Nome dell'opera</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-      </div>
-      <div class="col-6 mb-5">
-        <img src="img/vanGogh-1.jpg" class="card-img-top" alt="Van Gogh">
-      </div>
-
-      <div class="col-6 mb-5">
-        <img src="img/vanGogh-1.jpg" class="card-img-top" alt="Van Gogh">
-      </div>
-      <div class="col-6">
-        <div class="white-panel white-panel--right p-4">
-          <h2>Nome dell'opera</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-      </div>
-
-      <div class="col-6">
-        <div class="white-panel white-panel--left p-4">
-          <h2>Nome dell'opera</h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-      </div>
-      <div class="col-6 mb-5">
-        <img src="img/vanGogh-1.jpg" class="card-img-top" alt="Van Gogh">
-      </div>
-
-    </div>
-  </div>
-  <!-- fine 2 COLONNE -->
-
-
-
 
   <!-- inizio FOOTER -->
   <footer class="bg-dark text-white py-5">
