--- a/museo-statico/opera.html
+++ b/museo-statico/opera.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="it">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homepage</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Opera</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- inizio descrizione -->
+  <header class="mb-4">
+    <h1 class="display-3 text-center">Notte stellata</h1>
+    <a href="artista.html">
+      <p class="text-center">Vincent van Gogh</p>
+    </a>
+    <div class="text-center" >
+      <img src="img/vanGogh-1.jpg" alt="" width="300" height="400">
+    </div>
+  </header>
+  <div class="container">
+
+    <p>
+      Nel 1888, prima dell'internamento a Saint-Rémy, van Gogh scrisse:
+
+      «Con un quadro vorrei poter esprimere qualcosa di commovente come una musica. Vorrei dipingere uomini e donne con un non so che di eterno, di cui un tempo era simbolo l’aureola, e che noi cerchiamo di rendere con lo stesso raggiare, con la vibrazione dei colori [...]. Ah il ritratto, il ritratto che mostri i pensieri, l’anima del modello: ecco cosa credo debba vedersi»
+
+      (Vincent van Gogh, Arles, 3 settembre 1888)
+      La Notte stellata, certamente una delle opere vangoghiane più celebri, risponde perfettamente a quest'esigenza. In questo dipinto, infatti, il pittore ha certamente cercato il contatto diretto con la realtà, dipingendo quello che si poteva vedere dalla finestra della sua stanza nel manicomio di Saint-Rémy. Van Gogh, tuttavia, non ha ripreso fedelmente questa veduta notturna, bensì l'ha manipolata con mezzi plastici, interiorizzandola fino allo spasimo e trasformandola in una potente visione onirica in cui poter fare affiorare le sue emozioni, le sue paure, i suoi viaggi dell'anima. La Notte stellata, pertanto, non offre all'osservatore un'immagine fedele della realtà, quanto una forma di «espressione» di quest'ultima.
+
+      L'immagine possiede una forza straordinaria. A sinistra la scena è chiusa da un cipresso alto e severo che, stagliandosi contro il cielo notturno, agisce come un intermediario vegetale tra la terra e il cielo, tra la vita e la morte: più che un albero sembrerebbe quasi una fiamma scura che divampa all'improvviso alla ricerca dell'infinito. A fianco del solitario cipresso troviamo un piccolo paesino - forse è Saint-Rémy, forse Nuenen, forse una reminiscenza del villaggio natio - che, disperdendosi su una vallata, sembra perduto nell'immensità del movimento cosmico che fluisce sopra di esso: i caseggiati sono generalmente bassi, fatta eccezione per l'acuminata cuspide di un campanile, che riprende la statuaria verticalità del cipresso e «sfida le forze della natura: è un'antenna e un parafulmine insieme, una sorta di Tour Eiffel, la cui fascinazione è sempre presente nelle vedute notturne dell'artista [...] sembra crepitare, carica di elettricità».[3] A destra vigoreggia la ricca vegetazione degli ulivi, mentre sullo sfondo si estende il profilo diagonale e ondulato delle Alpilles, importante catena montuosa del Meridione francese.
+
+      Il villaggio è avvolto dal buio e dal sonno e rimanda nel suo complesso a un ideale di placida quiete.[4] Il paesaggio, al contrario, rinvia esplicitamente alla grandiosa natura decantata a inizio secolo dal romantico Caspar David Friedrich, soprattutto con i monti retrostanti, come osservato dai critici d'arte Giorgio Cricco e Francesco di Teodoro:
+
+      «Le colline azzurre nella notte, trattate con linee ondulate e parallele, non hanno più il rassicurante aspetto di rilievi pettinati dal vento, indorati e scaldati dal sole (come in Renoir), ma sembrano minacciose acque dilavanti, di cui le curve degli ulivi sono le frange più avanzate e ribollenti»
+
+      (Giorgio Cricco, Francesco di Teodoro[5])
+      L'inquietudine dell'artista, poi, esplode nella porzione superiore della tela, quella relativa al cielo. Questi spazi cosmici sono rischiarati dalla luce aranciata della falce lunare, visibile in alto a destra, e dal quieto pulsare del pianeta Venere, anche conosciuto come «stella del mattino». Ma a catturare l'attenzione dell'osservatore sono soprattutto le stelle, che sembrano ruotare pericolosamente su sé stesse in gorghi titanici e vorticosi, come se fossero meteore impazzite: ciò è particolarmente evidente nel vortice centrale, dove l'intervento di pennellate che cambiano ripetutamente direzione ne trasforma il romantico pulsare in uno spasmodico turbinio. Il movimento arcano degli astri, nonostante la sua tumultuosità, è infatti guidato da pennellate che, raggrumandosi e ispessendosi, distribuiscono la materia pittorica secondo irradiazioni circolari. La visione, poi, viene resa armoniosa dal mirabile contrasto presente tra l'ultramarino, i blu cobalto (tonalità costitutive del cielo) e i gialli indiano e di zinco (i quali, invece, vanno a tingere le stelle). «Il colore, di consistenza molto fluida» osservano ancora Cricco e di Teodoro «è steso con uno spessore minimo, a piccoli tocchi ravvicinati, lasciando qua e là spazi vuoti, dai quali si intravede anche la trama della tela sottostante che, in corrispondenza delle stelle, ne simula il tremolio. In questo modo il dipinto assume un tono brillante ma freddo allo stesso tempo, che restituisce l’atmosfera rarefatta e quasi lattiginosa della notte stellata».[5]
+
+      Questo itinerario pittorico dagli accenti siderali ripropone l'inquietante consapevolezza di una solitudine desolata e di un animo smarrito e allucinato. La contemplazione di questo cielo stellato affascinante e terribile è tutt'altro che idillica, ma vuole affrontare il mistero dell'universo e della drammatica vitalità del pittore, che non a caso ricorre a un segno pittorico materico, agitato, quasi aggressivo, che si smorza solo quando tratteggia le morbide ondulazioni delle Alpilles, le quali sono tra l'altro rimarcate da una spessa linea di contorno nera, che probabilmente intende sottolineare la loro appartenenza alla dimensione terrena. La potente raffigurazione del cielo, insieme al contrasto stridente tra i bagliori vibranti e infuocati degli astri e alla flebile luce emessa dalle luci del villaggio sottostante, sembra quasi voler delineare un confine individuabile tra van Gogh e il mondo, tra il «sentimento di fragilità e inconsistenza dell’individuo [e] la sublime e soverchiante immensità del cosmo» (Carlo Bertelli).[6] Così, in questo capolavoro dell'arte ottocentesca, i vertiginosi e drammatici tormenti di van Gogh trovano una delle loro più belle e potenti raffigurazioni.
+    </p>
+
+    <!-- fine descrizione -->
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   </body>
-</html>
+  </html>
